--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
            <meta
     </head> name="viewport" content="width-device=width, inital=scale=1.0">
     <title> Git &github
-    <h2>Git workflow</h2>
+    <h2>Git workflow
+        ,<h2>Git workflow github</h2>
+    </h2>
     </title>
 </html>
